--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </title>
 </head>
 <body>
-<div> id="app"</div>
+  <h1>
+    Hello World!
+  </h1>
+<div id="app"> </div>
 <script>src="/bundle.js"</script>
 </body>
